--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
+    "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
